# linkedin-esg-sentiment

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: linkedin_cookies.json
notebooks/: 02_sentiment_analysis.ipynb  02_sentiment_analysis_executed.ipynb  03_thematic_analysis.ipynb
paper/: manuscript.md  references.bib
scripts/: scrape_vale.py
src/: __init__.py  cli.py  config.py  extract.py  io_utils.py  linkedin_scraper.py  quality_gate.py
tests/: test_config.py  test_extract.py  test_integration.py  test_quality_gate.py
