[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "linkedin-esg-sentiment"
version = "0.1.0"
description = "Analyzing Environmental, Social, and Governance (ESG) sentiment from LinkedIn posts."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "pandas>=1.5",
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
    "textblob>=0.17",
    "sastrawi>=1.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "jupyter>=1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
